Added /meals query params
